// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`digital exam session format snapshots renders with description=false 1`] = `
<DocumentFragment>
  <div
    class="exam-session-format"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium exam-session-format__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="LaptopIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 18c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2H0v2h24v-2zM4 6h16v10H4z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 exam-session-format__label css-rizt0-MuiTypography-root"
    >
      Digitesti
    </p>
  </div>
</DocumentFragment>
`;

exports[`digital exam session format snapshots renders with description=true 1`] = `
<DocumentFragment>
  <div
    class="exam-session-format"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium exam-session-format__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="LaptopIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 18c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2H0v2h24v-2zM4 6h16v10H4z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 exam-session-format__label css-rizt0-MuiTypography-root"
    >
      Digitesti
    </p>
     - Testi tehdään testipaikalla järjestäjän tarjoamalla tietokoneella.
  </div>
</DocumentFragment>
`;

exports[`paper exam session format snapshots renders with description=false 1`] = `
<DocumentFragment>
  <div
    class="exam-session-format"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium exam-session-format__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="NoteAltOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75M19 19H5V5h14z"
      />
      <path
        d="m15.08 11.03-2.12-2.12L7 14.86V17h2.1zm1.77-1.76c.2-.2.2-.51 0-.71l-1.41-1.41c-.2-.2-.51-.2-.71 0l-1.06 1.06 2.12 2.12z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 exam-session-format__label css-rizt0-MuiTypography-root"
    >
      Paperitesti
    </p>
  </div>
</DocumentFragment>
`;

exports[`paper exam session format snapshots renders with description=true 1`] = `
<DocumentFragment>
  <div
    class="exam-session-format"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium exam-session-format__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="NoteAltOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75M19 19H5V5h14z"
      />
      <path
        d="m15.08 11.03-2.12-2.12L7 14.86V17h2.1zm1.77-1.76c.2-.2.2-.51 0-.71l-1.41-1.41c-.2-.2-.51-.2-.71 0l-1.06 1.06 2.12 2.12z"
      />
    </svg>
    <p
      class="MuiTypography-root MuiTypography-body1 exam-session-format__label css-rizt0-MuiTypography-root"
    >
      Paperitesti
    </p>
     - Testi tehdään testipaikalla kynällä paperille.
  </div>
</DocumentFragment>
`;
